# diario-contract

./: CHANGELOG.md  README.md  pyproject.toml
.github/: copilot-instructions.md
diario_contract/: __init__.py  base.py  version.py
diario_contract.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
diario_contract/act/: __init__.py  act.py  act_embedding.py  parquet.py
diario_contract/article/: article.py  content.py  metadata.py  parquet.py
diario_contract/chunk/: __init__.py  text_chunk.py
diario_contract/embedding/: __init__.py  embedded_chunk.py
diario_contract/enums/: content_type.py
diario_contract/gazette/: edition.py  metadata.py  parquet.py
diario_contract/parser/: __init__.py  named_entity.py  parsed_article.py  parsed_chunk.py
diario_contract/rag/: __init__.py  answer.py
diario_contract/retrieval/: __init__.py  retrieved_document.py
docs/: compability.md  lifecicle.md  overview.md  versioning.md
tests/: test_contract_models.py  test_schema_stability.py
