[project]
name = "diario-contract"
version = "1.1.2"
description = "Shared data contracts for Diario RAG ETL"
requires-python = ">=3.10,<3.13"

dependencies = [
    "pydantic>=2.6,<3.0",
    "pyarrow==22.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
